<resources>

    <string name="app_name">Euler Runner</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Euler Runner</string>
    <string name="problem_number">Problem number:</string>
	<string name="problems">Problems:</string>
	<string name="problem_description">Problem description:</string>
	<string name="answer">Answer:</string>
	<string name="no_answer_yet">No answer yet</string>
	<string name="three_zeros">000</string>
	<string name="blank"></string>
	<string name="debug_text">Debug Text:</string>
	<string name="run">Run</string>
	<string name="time_taken">Time taken:</string>
	<string name="not_run_yet">not run yet</string>
	<string name="debug">Debug</string>
	<string name="stop">Stop</string>
	<string name="remember_problem">Remember current problem at startup</string>
	<string name="remember_problem_summary">Remember the last selected problem, and go back there at startup.</string>
	
</resources>
