<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="200dip"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/problems_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/problems"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ListView
            android:id="@+id/problems_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/problems"
            android:fastScrollAlwaysVisible="true"
            android:fastScrollEnabled="true"
            android:smoothScrollbar="true"
            android:textFilterEnabled="true" >

        </ListView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/problem_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/problem_number"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/problem_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/problem_number_label"
            android:paddingLeft="@dimen/padding_large"
            android:text="@string/three_zeros"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/problem_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/problem_number_label"
            android:text="@string/problem_description"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <WebView
            android:id="@+id/problemDescriptionWebView"
            android:layout_width="wrap_content"
            android:layout_height="200dip"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/run_button"
            android:layout_below="@+id/problem_description_label" />

        <TextView
            android:id="@+id/debug_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView5"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@id/run_button"
            android:layout_below="@+id/textView6" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/answer"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/textView4"
            android:hint="@string/no_answer_yet"
            android:paddingLeft="@dimen/padding_large"
            android:text="@string/blank"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/problemDescriptionWebView"
            android:text="@string/debug_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_above="@+id/answer"
            android:text="@string/time_taken"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/time_taken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView5"
            android:layout_toRightOf="@+id/textView6"
            android:text="@string/not_run_yet"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#aaaaaa" />

        <Button
            android:id="@+id/run_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/run" />

        <Button
            android:id="@+id/debug_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="@dimen/padding_large"
            android:layout_toLeftOf="@+id/run_button"
            android:text="@string/debug" />

    </RelativeLayout>

</LinearLayout>